feat: allow users to delete own comments
